tests/snapshots/snapshot_new_crates__daemon_api_response_backend_list.snap
---
source: tests/snapshot_new_crates.rs
expression: resp
---
{
  "type": "backend_list",
  "backends": [
    {
      "id": "mock",
      "capabilities": {}
    }
  ]
}
