tests/snapshots/snapshot_new_crates__daemon_api_response_health.snap
---
source: tests/snapshot_new_crates.rs
expression: resp
---
{
  "type": "health",
  "status": "ok",
  "version": "abp/v0.1",
  "uptime_secs": 120,
  "backends": [
    "mock",
    "sidecar"
  ]
}
