tests/snapshots/snapshot_new_crates__daemon_api_response_run_cancelled.snap
---
source: tests/snapshot_new_crates.rs
expression: resp
---
{
  "type": "run_cancelled",
  "run_id": "00000000-0000-4000-8000-000000000001"
}
