tests/snapshots/snapshot_new_crates__daemon_backend_info.snap
---
source: tests/snapshot_new_crates.rs
expression: json_str
---
{
  "id": "mock",
  "capabilities": {
    "streaming": "native",
    "tool_use": "native",
    "extended_thinking": "emulated"
  }
}
