tests/snapshots/snapshot_new_crates__daemon_run_metrics.snap
---
source: tests/snapshot_new_crates.rs
expression: m
---
{
  "total_runs": 100,
  "running": 3,
  "completed": 90,
  "failed": 7
}
