tests/snapshots/snapshot_new_crates__daemon_run_status_failed.snap
---
source: tests/snapshot_new_crates.rs
expression: status
---
{
  "status": "failed",
  "error": "sidecar crashed with exit code 1"
}
