tests/snapshots/snapshot_new_crates__daemon_run_status_pending.snap
---
source: tests/snapshot_new_crates.rs
expression: "RunStatus::Pending"
---
{
  "status": "pending"
}
