tests/snapshots/snapshot_new_crates__dialect_all_variants.snap
---
source: tests/snapshot_new_crates.rs
expression: dialects
---
[
  "open_ai",
  "claude",
  "gemini",
  "codex",
  "kimi",
  "copilot"
]
